--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -14,19 +14,21 @@
 }
 
 body {
-  /*background-image: linear-gradient(to top left, #a82654, #fd8c69);*/
-  background-color: #fbf1e4;
   min-height: 100vh;
   text-size-adjust: auto;
   margin: 0 auto;
   position: relative;
   min-width: 100vw;
+  width: 100%;
+  display: block;
   overflow-x: hidden;
 }
 
 .background {
-  width: auto;
-  background-image: linear-gradient(to top left, #a82654, #fd8c69);
+  z-index: -2;
+  position: fixed;
+  height: auto;
+  width: 100%;
 }
 
 section {
@@ -38,9 +40,9 @@ section {
   position: sticky;
   z-index: 1100;
   top: 10px;
+  left: 20px;
   width: 65px;
   height: 65px;
-  margin-left: 30px;
   border-radius: 20px;
 }
 
@@ -48,9 +50,9 @@ section {
   position: sticky;
   z-index: 1100;
   top: 10px;
+  right: 20px;
   width: 50px;
   height: 50px;
-  margin-right: 30px;
   margin-top: -99px;
   border-radius: 20px;
   float: right;
@@ -62,8 +64,7 @@ button {
 }
 
 button.menuButtons:hover {
-  background-color: #fbf1e4;
-  box-shadow: 0px 10px 15px #fbf1e4;
+  box-shadow: 0px 10px 15px #798ef6;
   transition: 0.2s ease-in;
   transform: translateY(-4px);
 }
@@ -96,7 +97,8 @@ button:active {
   text-align: center;
   font-size: 0.75em;
   transition: 0.3s ease;
-  background-color: #fbf1e4;
+  background: -webkit-linear-gradient(bottom right, #7bd5f5, #787ff6);
+
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   padding: 0.1em 0.25em;
@@ -104,7 +106,7 @@ button:active {
 }
 
 .menuButtons {
-  background-color: #fbf1e4;
+  background: -webkit-linear-gradient(bottom right, #7bd5f5, #787ff6);
   box-shadow: 2px 2px 3px #252525;
 
   width: 50px;
@@ -120,7 +122,7 @@ button:active {
   margin: 20px auto;
   display: flex;
   justify-content: center;
-  color: #fbf1e4;
+  color: #798ef6;
   text-shadow: 2px 2px 3px #252525;
   transition: 1s ease-in;
 }
@@ -137,8 +139,8 @@ button:active {
 }
 
 .greeting {
-  color: #fbf1e4;
-  text-shadow: 2px 2px 3px #252525;
+  color: #798ef6;
+  text-shadow: 1px 2px 3px #252525; /* Horizontal offset, Vertical offset, Blur radius, Color */
   transition: 1s ease-in;
   margin: 0 auto;
   padding: 0.35em 0;
@@ -156,6 +158,7 @@ button:active {
 
 .mainPictures:hover,
 .infoCard:hover,
+.contactCard:hover,
 .resumeCard:hover,
 .formButtons:hover,
 #readMoreButton:hover,
@@ -166,27 +169,14 @@ footer:hover {
 }
 
 .infoCard {
-  background-color: #fbf1e4;
+  background-color: #dbeefb;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
-  padding: 1em;
+  padding: 16px;
   margin: auto;
-  width: 100%;
   transition: 0.2s ease-in;
-}
-
-.mainCard {
-  width: 266px;
+  width: 265px;
   height: 255px;
-}
-
-.cardTitles {
-  background: -webkit-linear-gradient(top, #fd8c69, #a82654);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-bottom: 0.75em;
-  font-size: 1.2em;
 }
 
 .infoCard p {
@@ -195,14 +185,6 @@ footer:hover {
   text-indent: 2em;
   color: #252525;
   margin: 0;
-}
-
-.skillHeading {
-  background: -webkit-linear-gradient(bottom, #fd8c69, #a82654);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-style: oblique;
 }
 
 .infoCard ul {
@@ -217,6 +199,23 @@ footer:hover {
   padding: 0.45em 0;
 }
 
+.cardTitles {
+  background: -webkit-linear-gradient(top, #7bd5f5, #787ff6);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 0.75em;
+  font-size: 1.2em;
+}
+
+.skillHeading {
+  background: -webkit-linear-gradient(bottom, #fd8c69, #a82654);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-style: oblique;
+}
+
 #message::-webkit-scrollbar,
 .container::-webkit-scrollbar {
   padding: 10px;
@@ -225,7 +224,7 @@ footer:hover {
 
 #message::-webkit-scrollbar-track,
 .container::-webkit-scrollbar-track {
-  background: #fbf1e4;
+  background: #dbeefb;
   border: 2px solid #252525;
   border-radius: 30px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -235,7 +234,7 @@ footer:hover {
 
 #message::-webkit-scrollbar-thumb,
 .container::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(to right, #a82654, #fd8c69);
+  background: -webkit-linear-gradient(top right, #7bd5f5, #787ff6);
   border-radius: 30px;
   width: 90%;
   border: 2px solid #252525;
@@ -248,6 +247,12 @@ footer:hover {
     display: none;
   }
 
+  .background {
+    height: 100vh;
+    width: auto;
+    position: fixed;
+  }
+
   section {
     width: 100%;
   }
@@ -256,14 +261,14 @@ footer:hover {
     margin: 0;
   }
 
-  .mainCard {
+  .infoCard {
     margin: 0.5em auto;
     width: 275px;
     height: fit-content;
   }
 
-  .infoCard {
-    min-width: 350px;
+  .contactCard {
+    min-width: 300px;
   }
 
   #projectContainer.container {
@@ -277,7 +282,7 @@ footer:hover {
 
 /* TECH STACK SECTION */
 .techStackCard {
-  background-color: #fbf1e4;
+  background-color: #dbeefb;
   box-shadow: 2px 2px 3px #252525;
   margin: 10px auto;
   padding: 20px;
@@ -289,7 +294,7 @@ footer:hover {
 }
 
 .progLangCube {
-  background-image: linear-gradient(to top left, #a82654, #fd8c69);
+  background: -webkit-linear-gradient(top, #7bd5f5, #787ff6);
   width: inherit;
   height: 3em; /*3em Original Size*/
   box-shadow: 2px 2px 3px #252525;
@@ -336,7 +341,7 @@ h6.progLangName {
   margin: auto;
   font-size: 0.75em;
   font-style: oblique;
-  color: #fbf1e4;
+  color: #dbeefb;
   font-weight: bold;
   transition: 0.1s ease;
   margin-top: 1.45em;
@@ -350,7 +355,7 @@ img.progLangIcon {
 
 hr#techDescDivider {
   margin: 0.25em auto;
-  background-color: #fbf1e4;
+  background-color: #dbeefb;
   opacity: 100%;
   border: none;
   height: 1.5px;
@@ -361,7 +366,7 @@ hr#techDescDivider {
 
 .description {
   padding: 0 1em;
-  color: #fbf1e4;
+  color: #dbeefb;
   text-decoration: underline;
   font-size: 0.9em;
 }
@@ -371,7 +376,7 @@ hr#techDescDivider {
   align-items: flex-start;
   text-align: center;
   padding: 0 1em;
-  color: #fbf1e4;
+  color: #dbeefb;
   margin: 0.6em auto;
   font-size: 0.65em;
   text-decoration: none;
@@ -380,7 +385,7 @@ hr#techDescDivider {
 
 #readMoreButton {
   border: none;
-  background-color: #fbf1e4;
+  background-color: #dbeefb;
   border-radius: 20px;
   padding: 0.25em 0.5em;
   margin: 0.15em;
@@ -410,30 +415,6 @@ hr#techDescDivider {
 #dartLogo {
   margin: 0.3em 0;
 }
-
-.definitions {
-  font-size: 12px;
-  text-align: justify;
-}
-
-.definitions b {
-  text-decoration: underline;
-}
-
-.defSource {
-  color: #fbf1e4;
-  position: relative;
-  float: right;
-  font-size: 0.7em;
-  padding: 0 1em;
-  transition: 0.2s ease-in;
-}
-
-.defSource:hover {
-  text-shadow: 1px 2.5px 5px #252525;
-  transition: 0.2s ease-in;
-}
-
 /* PROJECTS SECTION*/
 
 #projectContainer {
@@ -447,7 +428,7 @@ hr#techDescDivider {
 }
 
 .projectCard {
-  background-color: #fbf1e4;
+  background-color: #dbeefb;
   box-shadow: 2px 2px 3px #252525;
   margin: 20px auto;
   transition: 0.2s ease-in;
@@ -462,7 +443,7 @@ hr#techDescDivider {
 }
 
 .projectTitle {
-  color: #fbf1e4;
+  color: #dbeefb;
   background-color: #252525;
   border-radius: 200px;
   box-shadow: 2px 2px 3px #252525;
@@ -489,8 +470,7 @@ h4.projectTitle {
 .projectButton:hover,
 .sourceCodeButton:hover,
 .projectTitle:hover {
-  box-shadow: 0px 10px 15px #fd8c69;
-  background-color: #fd8c69;
+  box-shadow: 0px 10px 15px #798ef6;
   transform: translateY(-4px);
 }
 
@@ -522,7 +502,7 @@ h4.projectTitle {
   width: auto;
   margin-top: -150px;
   padding: 10px;
-  color: #fbf1e4;
+  color: #dbeefb;
   transition: 0.3s ease;
   border-radius: 20px;
   user-select: none;
@@ -540,15 +520,15 @@ h4.projectTitle {
 
 .prev:hover,
 .next:hover {
-  background-color: #fd8c69;
+  background-color: #798ef6;
   box-shadow: 1px 2.5px 5px #252525;
-  color: #ffffff;
+  color: #dbeefb;
   transform: translateY(-2px);
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #fbf1e4;
+  color: #dbeefb;
   padding: 15px;
   font-size: 12px;
   position: absolute;
@@ -563,7 +543,7 @@ h4.projectTitle {
   cursor: pointer;
   height: 10px;
   width: 10px;
-  background-color: #fbf1e4;
+  background-color: #dbeefb;
   box-shadow: 2px 2px 3px #252525;
   border-radius: 50%;
   display: inline-block;
@@ -582,16 +562,25 @@ h4.projectTitle {
 .dot1:hover,
 .dot2:hover,
 .dot3:hover {
-  background-image: linear-gradient(to top left, #a82654, #fd8c69);
-  box-shadow: 0px 2px 5px #fd8c69;
+  background: -webkit-linear-gradient(top, #7bd5f5, #787ff6);
+  box-shadow: 0px 2px 5px #798ef6;
   transform: translateY(-2px);
   transition: ease 0.5s;
 }
 
 /* CONTACT INFORMATION SECTION */
-.socialMediaButton {
-  background-image: linear-gradient(to top left, #a82654, #fd8c69);
+.contactCard {
+  background-color: #dbeefb;
+  border-radius: 20px;
+  box-shadow: 2px 2px 3px #252525;
+  padding: 16px;
+  margin: auto;
+  width: 100%;
+  transition: 0.2s ease-in;
+}
 
+.socialMediaButton {
+  background: -webkit-linear-gradient(top right, #7bd5f5, #787ff6);
   box-shadow: 2px 2px 3px #252525;
 
   width: 50px;
@@ -611,11 +600,11 @@ h4.projectTitle {
 }
 
 .formButtons {
-  background-image: linear-gradient(to top left, #a82654, #fd8c69);
+  background: -webkit-linear-gradient(top right, #7bd5f5, #787ff6);
   border: none;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
-  color: #fbf1e4;
+  color: #dbeefb;
   padding: 10px;
   margin: auto;
   resize: none;
@@ -624,7 +613,7 @@ h4.projectTitle {
 }
 
 .formButtons:focus {
-  box-shadow: 0px 10px 15px #a82654;
+  box-shadow: 0px 10px 15px #798ef6;
   transform: translateY(-4px);
   transition: 0.2s ease-in;
 }
@@ -633,13 +622,13 @@ h4.projectTitle {
   padding: 10px;
   margin: 5px;
   resize: none;
-  color: #fbf1e4;
+  color: #dbeefb;
 }
 
 ::placeholder {
   padding: 5px;
   margin: auto;
-  color: #fbf1e4;
+  color: #dbeefb;
   font-size: 13px;
 }
 
@@ -648,7 +637,7 @@ h4.projectTitle {
   padding: 10px;
   width: 45%;
   box-shadow: 2px 2px 3px #252525;
-  color: #fbf1e4;
+  color: #dbeefb;
 }
 
 #lastName {
@@ -656,7 +645,7 @@ h4.projectTitle {
   padding: 10px;
   width: 45%;
   box-shadow: 2px 2px 3px #252525;
-  color: #fbf1e4;
+  color: #dbeefb;
 }
 
 #email {
@@ -664,7 +653,7 @@ h4.projectTitle {
   padding: 10px;
   width: 90%;
   box-shadow: 2px 2px 3px #252525;
-  color: #fbf1e4;
+  color: #dbeefb;
 }
 
 textarea {
@@ -674,7 +663,7 @@ textarea {
   height: 150px;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
-  color: #fbf1e4;
+  color: #dbeefb;
 }
 
 #firstName:hover,
@@ -686,11 +675,11 @@ textarea {
 #firstName:focus,
 #lastName:focus,
 #email:focus {
-  box-shadow: 0px 10px 15px #a82654;
+  box-shadow: 0px 10px 15px #798ef6;
 }
 
 #submitButton {
-  color: #fbf1e4;
+  color: #dbeefb;
   font-size: 12px;
   margin: 0 auto;
   box-shadow: 2px 2px 3px #252525;
@@ -704,7 +693,7 @@ textarea {
 #submitButton:active {
   transform: translateY(-2px);
   transition: 0.2s ease-in;
-  box-shadow: 0px 10px 15px #a82654;
+  box-shadow: 0px 10px 15px #798ef6;
 }
 
 .pageclip-form__submit::after {
@@ -718,7 +707,7 @@ textarea {
 }
 
 .resumeCard {
-  background-color: #fbf1e4;
+  background-color: #dbeefb;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   height: auto;
@@ -733,7 +722,7 @@ textarea {
 }
 
 .resumeCard:hover h6 {
-  color: #fd8c69;
+  color: #798ef6;
 }
 
 .resumeCard:active {
@@ -761,7 +750,7 @@ footer {
   justify-content: center;
   align-items: center;
   margin: 20px auto;
-  background-color: #fbf1e4;
+  background-color: #dbeefb;
   width: fit-content;
   max-width: 90%;
   padding: 5px 20px;
