--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -132,10 +132,10 @@ button:active {
 }
 
 /* ABOUT ME SECTION*/
+
 .greet {
-  margin: 3em auto;
+  margin: auto;
   width: 100%;
-  padding: 0;
 }
 
 .greeting {
@@ -175,7 +175,7 @@ footer:hover {
 }
 
 .infoCard {
-  background-color: #dbeefb;
+  background-color: #e3e1e3;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   padding: 16px;
@@ -207,7 +207,7 @@ footer:hover {
 }
 
 .cardTitles {
-  background: -webkit-linear-gradient(top, #7bd5f5, #787ff6);
+  background: -webkit-linear-gradient(bottom right, #7bd5f5, #787ff6);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -231,7 +231,7 @@ footer:hover {
 
 #message::-webkit-scrollbar-track,
 .container::-webkit-scrollbar-track {
-  background: #dbeefb;
+  background: #e3e1e3;
   border: 2px solid #252525;
   border-radius: 30px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -293,7 +293,7 @@ footer:hover {
 
 /* TECH STACK SECTION */
 .techStackCard {
-  background-color: #dbeefb;
+  background-color: #e3e1e3;
   box-shadow: 2px 2px 3px #252525;
   margin: 10px auto;
   padding: 20px;
@@ -352,7 +352,7 @@ h6.progLangName {
   margin: auto;
   font-size: 0.75em;
   font-style: oblique;
-  color: #dbeefb;
+  color: #e3e1e3;
   font-weight: bold;
   transition: 0.1s ease;
   margin-top: 1.45em;
@@ -366,7 +366,7 @@ img.progLangIcon {
 
 hr#techDescDivider {
   margin: 0.25em auto;
-  background-color: #dbeefb;
+  background-color: #e3e1e3;
   opacity: 100%;
   border: none;
   height: 1.5px;
@@ -377,7 +377,7 @@ hr#techDescDivider {
 
 .description {
   padding: 0 1em;
-  color: #dbeefb;
+  color: #e3e1e3;
   text-decoration: underline;
   font-size: 0.9em;
 }
@@ -387,7 +387,7 @@ hr#techDescDivider {
   align-items: flex-start;
   text-align: center;
   padding: 0 1em;
-  color: #dbeefb;
+  color: #e3e1e3;
   margin: 0.6em auto;
   font-size: 0.65em;
   text-decoration: none;
@@ -396,7 +396,7 @@ hr#techDescDivider {
 
 #readMoreButton {
   border: none;
-  background-color: #dbeefb;
+  background-color: #e3e1e3;
   border-radius: 20px;
   padding: 0.25em 0.5em;
   margin: 0.15em;
@@ -439,7 +439,7 @@ hr#techDescDivider {
 }
 
 .projectCard {
-  background-color: #dbeefb;
+  background-color: #e3e1e3;
   box-shadow: 2px 2px 3px #252525;
   margin: 20px auto;
   transition: 0.2s ease-in;
@@ -454,7 +454,7 @@ hr#techDescDivider {
 }
 
 .projectTitle {
-  color: #dbeefb;
+  color: #e3e1e3;
   background-color: #252525;
   border-radius: 200px;
   box-shadow: 2px 2px 3px #252525;
@@ -513,7 +513,7 @@ h4.projectTitle {
   width: auto;
   margin-top: -150px;
   padding: 10px;
-  color: #dbeefb;
+  color: #e3e1e3;
   transition: 0.3s ease;
   border-radius: 20px;
   user-select: none;
@@ -533,13 +533,13 @@ h4.projectTitle {
 .next:hover {
   background-color: #798ef6;
   box-shadow: 1px 2.5px 5px #252525;
-  color: #dbeefb;
+  color: #e3e1e3;
   transform: translateY(-2px);
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #dbeefb;
+  color: #e3e1e3;
   padding: 15px;
   font-size: 12px;
   position: absolute;
@@ -554,7 +554,7 @@ h4.projectTitle {
   cursor: pointer;
   height: 10px;
   width: 10px;
-  background-color: #dbeefb;
+  background-color: #e3e1e3;
   box-shadow: 2px 2px 3px #252525;
   border-radius: 50%;
   display: inline-block;
@@ -581,7 +581,7 @@ h4.projectTitle {
 
 /* CONTACT INFORMATION SECTION */
 .contactCard {
-  background-color: #dbeefb;
+  background-color: #e3e1e3;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   padding: 16px;
@@ -615,7 +615,7 @@ h4.projectTitle {
   border: none;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
-  color: #dbeefb;
+  color: #e3e1e3;
   padding: 10px;
   margin: auto;
   resize: none;
@@ -633,13 +633,13 @@ h4.projectTitle {
   padding: 10px;
   margin: 5px;
   resize: none;
-  color: #dbeefb;
+  color: #e3e1e3;
 }
 
 ::placeholder {
   padding: 5px;
   margin: auto;
-  color: #dbeefb;
+  color: #e3e1e3;
   font-size: 13px;
 }
 
@@ -648,7 +648,7 @@ h4.projectTitle {
   padding: 10px;
   width: 45%;
   box-shadow: 2px 2px 3px #252525;
-  color: #dbeefb;
+  color: #e3e1e3;
 }
 
 #lastName {
@@ -656,7 +656,7 @@ h4.projectTitle {
   padding: 10px;
   width: 45%;
   box-shadow: 2px 2px 3px #252525;
-  color: #dbeefb;
+  color: #e3e1e3;
 }
 
 #email {
@@ -664,7 +664,7 @@ h4.projectTitle {
   padding: 10px;
   width: 90%;
   box-shadow: 2px 2px 3px #252525;
-  color: #dbeefb;
+  color: #e3e1e3;
 }
 
 textarea {
@@ -674,7 +674,7 @@ textarea {
   height: 150px;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
-  color: #dbeefb;
+  color: #e3e1e3;
 }
 
 #firstName:hover,
@@ -690,7 +690,7 @@ textarea {
 }
 
 #submitButton {
-  color: #dbeefb;
+  color: #e3e1e3;
   font-size: 12px;
   margin: 0 auto;
   box-shadow: 2px 2px 3px #252525;
@@ -718,7 +718,7 @@ textarea {
 }
 
 .resumeCard {
-  background-color: #dbeefb;
+  background-color: #e3e1e3;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   height: auto;
@@ -761,7 +761,7 @@ footer {
   justify-content: center;
   align-items: center;
   margin: 20px auto;
-  background-color: #dbeefb;
+  background-color: #e3e1e3;
   width: fit-content;
   max-width: 90%;
   padding: 5px 20px;
