--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -124,7 +124,7 @@ button.menuButtons:focus {
   display: flex;
   justify-content: center;
   color: #252525;
-  transition: 1s ease-in;
+  transition: 0.2s ease-in;
   text-shadow: 2px 3px 3px #e3e1e3;
 }
 
@@ -510,7 +510,7 @@ hr#techDescDivider {
 .projectCard {
   background-color: #e3e1e3;
   box-shadow: 2px 2px 3px #252525;
-  margin: 20px auto;
+  margin: 1em auto;
   transition: 0.2s ease-in;
 }
 
@@ -527,9 +527,9 @@ hr#techDescDivider {
   background-color: #252525;
   border-radius: 200px;
   box-shadow: 2px 2px 3px #252525;
-  margin: 10px;
-  padding: 5px;
-  width: 80%;
+  margin: 0.5em 0.5em;
+  padding: 0.75em;
+  width: fit-content;
   transition: 0.3s ease;
 }
 
@@ -537,33 +537,90 @@ h4.projectTitle {
   margin: 0 auto;
 }
 
-.projectButton,
-.sourceCodeButton {
+.projectButton {
   border-radius: 200px;
   box-shadow: 2px 2px 3px #252525;
   padding: 3px;
   border: none;
   background-color: #252525;
   transition: 0.2s ease-in;
+  width: 55px;
+  height: 55px;
+}
+
+.sourceCodeButton {
+  border-radius: 200px;
+  box-shadow: 2px 2px 3px #252525;
+  padding: 0 0.5em;
+  margin: 0.5em 0.5em;
+  border: none;
+  background-color: #252525;
+  transition: 0.2s ease-in;
+  color: #e3e1e3;
 }
 
 .projectButton:hover,
 .sourceCodeButton:hover,
-.projectTitle:hover {
-  box-shadow: 0px 10px 15px #798ef6;
+.projectTitle:hover,
+.projectType:hover {
+  box-shadow: 0px 10px 15px #252525;
   transform: translateY(-4px);
 }
 
 .projectDescription {
   padding: 10px;
   margin: 10px auto;
+  min-width: 250px;
+}
+
+.projectType {
+  color: #e3e1e3;
+  background-color: #252525;
+  box-shadow: 2px 2px 3px #252525;
+  margin: 0.25em 0.1em;
+  padding: 0.25em;
+  width: fit-content;
+  transition: 0.3s ease;
+}
+
+div.col.projectType {
+  padding: 0.2em;
+}
+
+#personal {
+  border-radius: 200px 0px 0px 200px; /*top-left top-right bottom-right bottom-left*/
+}
+#professional {
+  border-radius: 0px 200px 200px 0px;
+}
+
+.persActive {
+  background-color: #7bd5f5;
+  color: #252525;
+}
+.uniActive {
+  background-color: #79a9f5;
+  color: #252525;
+}
+.profActive {
+  background-color: #787ff6;
+  color: #252525;
+}
+
+.status {
+  color: #7ec384;
+  text-shadow: 2px 2px 3px #7ec384;
+  font-size: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Image Slideshow */
 .projectImages {
   border-radius: 20px;
-  width: 100%;
-  height: 250px;
+  height: 185px;
+  aspect-ratio: 3/2;
   box-shadow: 2px 2px 3px #252525;
   transition: 0.3s ease-in;
 }
@@ -580,12 +637,13 @@ h4.projectTitle {
   cursor: pointer;
   position: absolute;
   width: auto;
-  margin-top: -150px;
-  padding: 10px;
+  top: 40%;
+  margin: 0 2.75em;
   color: #e3e1e3;
   transition: 0.3s ease;
   border-radius: 20px;
   user-select: none;
+  opacity: 75%;
 }
 
 /* Position the "next button" to the right */
@@ -628,6 +686,7 @@ h4.projectTitle {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.3s ease;
+  opacity: 75%;
 }
 
 #imageDots1,
