--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -747,7 +747,7 @@ div.col.projectType {
 /* Image Slideshow */
 .projectImages {
   border-radius: 20px;
-  height: 180px;
+  height: 175px;
   aspect-ratio: 3/2;
   box-shadow: 2px 2px 3px #252525;
   transition: 0.3s ease-in;
@@ -789,16 +789,6 @@ div.col.projectType {
 .next:hover {
   box-shadow: 1px 2.5px 5px #252525;
   transform: translateY(-2px);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #e3e1e3;
-  padding: 15px;
-  font-size: 12px;
-  position: absolute;
-  top: 0;
-  border-radius: 50px;
 }
 
 /* The dots/indicators */
@@ -882,7 +872,7 @@ div.col.projectType {
   border: none;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
-  color: #e3e1e3;
+  color: #252525;
   padding: 10px;
   margin: auto;
   resize: none;
@@ -900,13 +890,13 @@ div.col.projectType {
   padding: 10px;
   margin: 5px;
   resize: none;
-  color: #e3e1e3;
+  color: #252525;
 }
 
 ::placeholder {
   padding: 5px;
   margin: auto;
-  color: #e3e1e3;
+  color: #252525;
   font-size: 13px;
 }
 
@@ -915,7 +905,7 @@ div.col.projectType {
   padding: 10px;
   width: 45%;
   box-shadow: 2px 2px 3px #252525;
-  color: #e3e1e3;
+  color: #252525;
 }
 
 #lastName {
@@ -923,7 +913,7 @@ div.col.projectType {
   padding: 10px;
   width: 45%;
   box-shadow: 2px 2px 3px #252525;
-  color: #e3e1e3;
+  color: #252525;
 }
 
 #email {
@@ -931,7 +921,7 @@ div.col.projectType {
   padding: 10px;
   width: 90%;
   box-shadow: 2px 2px 3px #252525;
-  color: #e3e1e3;
+  color: #252525;
 }
 
 textarea {
@@ -941,7 +931,7 @@ textarea {
   height: 150px;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
-  color: #e3e1e3;
+  color: #252525;
 }
 
 #firstName:hover,
@@ -957,7 +947,7 @@ textarea {
 }
 
 #submitButton {
-  color: #e3e1e3;
+  color: #252525;
   font-size: 12px;
   margin: 0 auto;
   box-shadow: 2px 2px 3px #252525;
@@ -975,17 +965,17 @@ textarea {
 }
 
 .pageclip-form__submit::after {
-  border-color: rgba(168, 38, 84, 0.8);
-  border-left-color: #a82654;
+  border-color: rgba(120, 127, 246, 0.8);
+  border-left-color: #7bd5f5;
 }
 
 .pageclip-form__success {
-  background: hsla(34, 74%, 94%, 0.8);
+  background: hsla(300, 3%, 89%, 0.8);
   border-radius: 20px;
 }
 
 .resumeCard {
-  background-color: #e3e1e3;
+  background-color: #e4e2e4;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   height: auto;
